--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 			        		<br>
 			        		<div class="row justify-content-center">
 				        		<div class="mx-3">
-					        		<button type="button" class="btn btn-outline-light btn-lg" style="border: 2px solid white; border-radius: 0px;">See our Products</button>
+					        		<button type="button" class="btn btn-outline-light btn-lg m-1" style="border: 2px solid white; border-radius: 0px;">See our Products</button>
 					        	</div>
 					        	<div class="mx-3">
-					        		<button type="button" class="btn btn-outline-light btn-lg" style="border: 2px solid white; border-radius: 0px;">Contact Us</button>
+					        		<button type="button" class="btn btn-outline-light btn-lg m-1" style="border: 2px solid white; border-radius: 0px;">Contact Us</button>
 				        		</div>
 			        		</div>
 			      		</div>
