Add existing file

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 									<div class="col-lg-3 col-md-3 col-sm-3 py-3">
 										<div class="text-left" style="font-family: 'Raleway', sans-serif; box-sizing: border-box;">
 											<div>
-												<img src="bottle.png" width="70" class="img-fluid float-left mr-2">
+												<img src="https://i.ibb.co/Mn57K45/bottle.png" width="70" class="img-fluid float-left mr-2">
 											</div>	
 												<div class="trio-container">
 													<div class="trio-header">
@@ -109,7 +109,7 @@
 									<div class="col-lg-3 col-md-3 col-sm-3 py-3">
 										<div class="text-left" style="font-family: 'Raleway', sans-serif; box-sizing: border-box;">
 											<div>
-												<img src="bottle.png" width="70" class="img-fluid float-left mr-2">
+												<img src="https://i.ibb.co/Mn57K45/bottle.png" width="70" class="img-fluid float-left mr-2">
 											</div>	
 												<div class="trio-container">
 													<div class="trio-header">
@@ -131,7 +131,7 @@
 									<div class="col-lg-3 col-md-3 col-sm-3 py-3">
 										<div class="text-left" style="font-family: 'Raleway', sans-serif; box-sizing: border-box;">
 											<div>
-												<img src="bottle.png" width="70" class="img-fluid float-left mr-2">
+												<img src="https://i.ibb.co/Mn57K45/bottle.png" width="70" class="img-fluid float-left mr-2">
 											</div>	
 												<div class="trio-container">
 													<div class="trio-header">
