Add existing file

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 									</div>
 								</div>
 
-								<div class="row justify-content-center m-1">
-									<div class="col-lg-3 col-md-3 col-sm-3 py-3">
+								<div class="row justify-content-center m-4">
+									<div class="col-lg-4 col-md-3 col-sm-3 py-3">
 										<div class="text-left" style="font-family: 'Raleway', sans-serif; box-sizing: border-box;">
 											<div>
 												<img src="https://i.ibb.co/Mn57K45/bottle.png" width="70" class="img-fluid float-left mr-2">
@@ -100,13 +100,14 @@
 													    </h4>
 													</div>
 													<div class="price">
-													    <button class="btn btn-green">Buy Now</button>
+													    <button class="btn btn-green">Buy Now</button> 
+													    <span class="font-weight-bold"> Php 100</span>
 													</div>
 												</div>
 										</div>
 									</div>
 
-									<div class="col-lg-3 col-md-3 col-sm-3 py-3">
+									<div class="col-lg-4 col-md-3 col-sm-3 py-3">
 										<div class="text-left" style="font-family: 'Raleway', sans-serif; box-sizing: border-box;">
 											<div>
 												<img src="https://i.ibb.co/Mn57K45/bottle.png" width="70" class="img-fluid float-left mr-2">
@@ -117,18 +118,18 @@
 														<span class="paratext">Glutathione</span>
 													</div>
 													<div class="trio-title">
-													    <h4 class="title-text">Kirei Immuno C
-													    	(100 Capsules)
+													    <h4 class="title-text">Kirei Glutathione (30 Capsules)
 													    </h4>
 													</div>
 													<div class="price">
 													    <button class="btn btn-green">Buy Now</button>
+													    <span class="font-weight-bold"> Php 100</span>
 													</div>
 												</div>
 										</div>
 									</div>
 
-									<div class="col-lg-3 col-md-3 col-sm-3 py-3">
+									<div class="col-lg-4 col-md-3 col-sm-3 py-3">
 										<div class="text-left" style="font-family: 'Raleway', sans-serif; box-sizing: border-box;">
 											<div>
 												<img src="https://i.ibb.co/Mn57K45/bottle.png" width="70" class="img-fluid float-left mr-2">
@@ -139,12 +140,12 @@
 														<span class="paratext">Drink</span>
 													</div>
 													<div class="trio-title">
-													    <h4 class="title-text">Kirei Immuno C
-													    	(100 Capsules)
-													    </h4>
+													    <h5 class="title-text">LONGEV8 ASHITABA POWDERED DRINK
+													    </h5>
 													</div>
 													<div class="price">
 													    <button class="btn btn-green">Buy Now</button>
+													    <span class="font-weight-bold"> Php 100</span>
 													</div>
 												</div>
 										</div>
